# vibe-controller

./: .env  .gitignore  README.md  electron-builder.json  index.html  package-lock.json  package.json  pyproject.toml  run.sh  tailwind.config.ts  tsconfig.agent.json  tsconfig.json  vite.config.ts
dist-electron/: agent.js  filesystem.js  main.js  preload.cjs
drone-challenge/: README.md  pyproject.toml
drone-challenge/proto/: drone.proto
drone-challenge/scripts/: generate_proto.sh
drone-challenge/src/drone_challenge/: drone.py
drone-challenge/src/drone_challenge/utils/: __init__.py
drone-challenge/tests/: test_import.py
electron/: filesystem.ts  main.ts  preload.cts  preload.tsconfig.json  tsconfig.json
experiments/: 7d768380-dc71-4d95-8e46-0e12b60c85bd.json
experiments/python-hello/: experiment.json
server/src/: agent.ts  filesystem.ts  index.ts
server/src/agent/: agent.ts  state.ts
server/src/middleware/: errorHandler.ts  notFoundHandler.ts
server/src/routes/: experiment.ts
src/: App.css  App.tsx  index.css
src/components/: ClarificationDialog.tsx  ControllerSetup.tsx  ExperimentDashboard.tsx  ExperimentList.tsx  FinalizeExport.tsx  Header.tsx  SpecificationBuilder.tsx  StepIndicator.tsx  TaskDescription.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx
src/lib/: api.ts  gemini.ts
src/pages/: Index.tsx  NewExperiment.tsx
src/pages/api/: get_experiment_state.ts
src/prompts/: README.md
src/styles/: drone-simulation.css
src/types/: electron.d.ts
